--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
 
 :root{
     --lightsout-bg: #000000;
@@ -21,6 +21,8 @@
     --gap: 8px;
 
     --profile-pic-size: 42px;
+
+    --header-height: 52px;
 }
 
 *{
@@ -58,24 +60,64 @@ body{
     border-right: var(--border);
 }
 
-.centerNavigation{
-    /* flex: 3; */
-    min-width: 606px;
-}
-
 .rightNavigation{
     min-width: 392px;
     /* flex: 1.75; */
     border-left: var(--border);
     padding: 0 var(--container-padding);
+    position: sticky;
+    top: -100px;
+    bottom: 0;
+    z-index: 998;
+}
+.centerNavigation{
+    /* flex: 3; */
+    min-width: 606px;
+}
+
+
+.postTweetContainer, .tweetTextNavigation{
+    border-bottom: var(--border);
+}
+
+
+/* Explore Page */
+
+.stickySearchBarWrapper{
+    position: sticky;
+    top: 0;
+    z-index: 999;
+    display: flex;
+    width: 100%;
+    background-color: var(--lightsout-bg);
+    border-bottom: var(--border);
+}
+
+.SettingsOutlinedIcon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    margin: 0 10px;
+    padding: 10px;
+}
+.SettingsOutlinedIcon:hover{
+    background-color: var(--lightsout-hover-color);
+    border-radius: var(--br-circle);
 }
 
 
 
-.postTweetContainer{
-    border-bottom: var(--border);
+/* See more button */
+
+.seeMoreWrapper{
+    cursor: pointer;
+    padding: 15px var(--container-padding);
+}
+.seeMoreWrapper:hover{
+    background-color: var(--lightsout-container-hover-color);
 }
 
-.tweetTextNavigation{
-    border-bottom: var(--border);
+.seeMore{
+    color: var(--twitter-color-main);
 }
