--- a/src/Components/headerBar.css
+++ b/src/Components/headerBar.css
@@ -21,17 +21,22 @@
 .headerTextSpan{
     cursor: pointer;
 }
+
 .headerIcon{
     width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     cursor: pointer;
+    gap: 10px;
+    
+}
+.headerIconIcon{
     border-radius: var(--br-circle);
     transition: background-color var(--transition-duration);
 }
 
-.headerIcon:hover{
-    background-color: var(--lightsout-hover-color);
+.headerIconIcon:hover{
+    background-color: var(--lightsout-container-hover-color-dark);
 }
